--- a/QuizBackend/requirements.txt
+++ b/QuizBackend/requirements.txt
@@ -1,7 +1,169 @@
-Django==4.2.2
-djangorestframework
-django-cors-headers
-daphne
-channels
-django_environ==0.10.0
+aiohttp==3.8.3
+aiosignal==1.3.1
+altgraph==0.17.3
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asgiref==3.8.1
+async-timeout==4.0.2
+attrs==24.2.0
+autobahn==23.6.2
+Automat==22.10.0
+base58==2.1.1
+bitarray==3.0.0
+black==24.10.0
+boto3==1.27.0
+botocore==1.30.0
+bunch==1.0.1
+CacheControl==0.14.1
+certifi==2024.8.30
+cffi==1.17.1
+cfscrape==2.1.1
+channels==4.0.0
+charset-normalizer==3.4.0
+ckzg==2.0.1
+click==8.1.7
+cloudinary==1.33.0
+colorama==0.4.6
+comtypes==1.1.14
+constantly==23.10.4
+construct==2.10.68
+construct-typing==0.5.6
+cryptography==44.0.0
+cytoolz==1.0.0
+daphne==4.1.0
+decorator==5.1.1
+defusedxml==0.8.0rc2
+Django==5.1.4
+django-allauth==0.51.0
+django-analytical==3.1.0
+django-appconf==1.0.5
+django-ckeditor==6.6.1
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.6.0
+django-countries==7.4.2
+django-environ==0.10.0
+django-filter==24.3
+django-ipware==4.0.2
+django-js-asset==2.0.0
+django-model-utils==4.2.0
+django-notifications-hq==1.7.0
+django-oauth-toolkit==3.0.1
+django-otp==1.5.4
+django-storages==1.13.2
+django-taggit==6.1.0
+django-tracking-analyzer==1.1.1
+django-user-agents==0.4.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+drf-social-oauth2==3.1.0
+drf-spectacular==0.28.0
+drf-spectacular-sidecar==2024.12.1
+emoji==2.14.0
+environ==1.0
+eth-account==0.13.4
+eth-hash==0.7.0
+eth-keyfile==0.8.1
+eth-keys==0.6.0
+eth-rlp==2.1.0
+eth-typing==5.0.1
+eth-utils==5.1.0
+eth_abi==5.1.0
+exceptiongroup==1.2.2
+filelock==3.16.1
+frozenlist==1.3.3
+future==0.18.2
+geocoder==1.38.1
+geoip2==4.6.0
+h11==0.14.0
+hexbytes==1.2.1
+httpcore==1.0.6
+httpx==0.27.2
+hyperlink==21.0.0
+idna==3.10
+incremental==22.10.0
+inflection==0.5.1
+jmespath==1.0.1
+joblib==1.4.2
+jsonalias==0.1.1
+jsonfield==3.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jwcrypto==1.5.6
+lockfile==0.12.2
+maxminddb==2.2.0
+msgpack==1.1.0
+multidict==6.0.2
+mypy-extensions==1.0.0
+nanoid==2.0.0
+oauthlib==3.2.2
+packaging==24.2
+parsimonious==0.10.0
+pathspec==0.12.1
+pefile==2022.5.30
+pillow==11.0.0
+platformdirs==4.3.6
+psycopg2==2.9.5
 psycopg2-binary==2.9.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyinstaller-hooks-contrib==2022.10
+PyJWT==2.10.1
+pyOpenSSL==24.0.0
+pyotp==2.9.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python3-openid==3.2.0
+pytz==2022.2.1
+pyunormalize==16.0.0
+pywifi==1.1.12
+pywin32==308
+pywin32-ctypes==0.2.0
+PyYAML==6.0.2
+qrcode==8.0
+ratelim==0.1.6
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+rlp==4.0.1
+rpds-py==0.22.3
+s3transfer==0.6.1
+scikit-learn==1.5.1
+scipy==1.14.0
+service-identity==24.1.0
+shell==1.0.1
+simplejson==3.19.3
+six==1.16.0
+sniffio==1.3.1
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+solana==0.35.0
+solders==0.21.0
+spl==0.0.1.dev0
+sqlparse==0.5.2
+swapper==1.3.0
+threadpoolctl==3.5.0
+tomli==2.2.1
+toolz==1.0.0
+tweepy==4.14.0
+Twisted==23.10.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+types-requests==2.31.0.6
+types-urllib3==1.26.25.14
+typing_extensions==4.12.2
+tzdata==2024.1
+ua-parser==0.16.1
+uritemplate==4.1.1
+urllib3==2.2.3
+user-agents==2.2.0
+uvicorn==0.27.1
+web3==7.5.0
+websockets==11.0.3
+whitenoise==6.8.2
+yarl==1.8.1
+zope.interface==6.2
